--- a/wedding-01-web/src/main/resources/runtimecfg/application.properties
+++ b/wedding-01-web/src/main/resources/runtimecfg/application.properties
@@ -1,6 +1,11 @@
 #MySQL database settings
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/wedding-erp
+
+jdbc.driver=net.sf.log4jdbc.DriverSpy
+jdbc.url=jdbc:log4jdbc:mysql://localhost:3306/erp-wedding
+
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/erp-wedding
+
 jdbc.username=root
 jdbc.password=
 #connection pool settings
