--- a/wedding-02-biz/pom.xml
+++ b/wedding-02-biz/pom.xml
@@ -22,5 +22,11 @@
             <artifactId>wedding-03-service</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.jonda.framework</groupId>
+            <artifactId>jonda-framework</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
