--- a/jonda-framework/pom.xml
+++ b/jonda-framework/pom.xml
@@ -25,6 +25,7 @@
         <slf4j.version>1.7.6</slf4j.version>
         <logback.version>1.1.1</logback.version>
         <commons-lang3.version>3.2.1</commons-lang3.version>
+        <hibernate-validator.version>5.0.3.Final</hibernate-validator.version>
     </properties>
 
     <dependencies>
@@ -204,6 +205,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator.version}</version>
         </dependency>
     </dependencies>
 
