--- a/jonda-framework/pom.xml
+++ b/jonda-framework/pom.xml
@@ -26,6 +26,7 @@
         <logback.version>1.1.1</logback.version>
         <commons-lang3.version>3.2.1</commons-lang3.version>
         <hibernate-validator.version>5.0.3.Final</hibernate-validator.version>
+        <gson.version>1.7.1</gson.version>
     </properties>
 
     <dependencies>
@@ -199,6 +200,12 @@
             <groupId>com.googlecode.log4jdbc</groupId>
             <artifactId>log4jdbc</artifactId>
             <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
 
         <dependency>
