--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
 
         <guava.version>16.0.1</guava.version>
+        <gson.version>1.7.1</gson.version>
         <junit.version>4.11</junit.version>
         <assertj.version>1.5.0</assertj.version>
         <mockito.version>1.9.5</mockito.version>
@@ -119,6 +120,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
