--- a/jonda-framework/pom.xml
+++ b/jonda-framework/pom.xml
@@ -26,7 +26,7 @@
         <logback.version>1.1.1</logback.version>
         <commons-lang3.version>3.2.1</commons-lang3.version>
         <hibernate-validator.version>5.0.3.Final</hibernate-validator.version>
-        <gson.version>1.7.1</gson.version>
+        <jackson.version>2.3.4</jackson.version>
     </properties>
 
     <dependencies>
@@ -157,6 +157,19 @@
             <version>${springside.version}</version>
         </dependency>
 
+        <!-- JSON begin -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-jaxb-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <!-- JSON end -->
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -200,12 +213,6 @@
             <groupId>com.googlecode.log4jdbc</groupId>
             <artifactId>log4jdbc</artifactId>
             <version>1.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
         </dependency>
 
         <dependency>
