添加sitemesh装饰页面，修改创建订单弹出框

--- a/wedding-01-web/pom.xml
+++ b/wedding-01-web/pom.xml
@@ -32,7 +32,7 @@
 
         <!-- sitemesh -->
         <dependency>
-            <groupId>opensymphony</groupId>
+            <groupId>org.sitemesh</groupId>
             <artifactId>sitemesh</artifactId>
         </dependency>
 
