--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
         <hibernate.version>4.3.1.Final</hibernate.version>
         <mybatis.version>3.2.5</mybatis.version>
-        <sitemesh.version>2.4.2</sitemesh.version>
+        <sitemesh.version>3.0.0</sitemesh.version>
         <hibernate-validator.version>5.0.3.Final</hibernate-validator.version>
         <jackson.version>2.3.1</jackson.version>
         <aspectj.version>1.7.4</aspectj.version>
@@ -72,12 +72,10 @@
             </dependency>
             <!-- PERSISTENCE end -->
 
-
             <dependency>
-                <groupId>opensymphony</groupId>
+                <groupId>org.sitemesh</groupId>
                 <artifactId>sitemesh</artifactId>
                 <version>${sitemesh.version}</version>
-                <scope>runtime</scope>
             </dependency>
 
             <dependency>
@@ -109,11 +107,6 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>${gson.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
